sctp: Elements don't propagate downstream flow returns to upstream
They should probably do the same as queue
and other elements with a source pad task: remember the last flow return on push and return that from the chain function.
Due to an influx of spam, we have had to impose restrictions on new accounts. Please see this wiki page for instructions on how to get full permissions. Sorry for the inconvenience.
They should probably do the same as queue
and other elements with a source pad task: remember the last flow return on push and return that from the chain function.